参加機能
