# backend/internal/generated/go/model_create_event_request.go
@@ -42,4 +42,10 @@ type CreateEventRequest struct {
 
 	// 日程候補（ISO 8601形式）
 	PollCandidates []time.Time `json:"poll_candidates,omitempty"`
+
+	// 確定した日程
+	ConfirmedDate time.Time `json:"confirmed_date,omitempty"`
+
+	// 日程確定予定日
+	ScheduleDeadline time.Time `json:"schedule_deadline,omitempty"`
 }
