# backend/internal/generated/go/model_join_event_request.go
@@ -10,14 +10,8 @@
 
 package generated
 
-type UserSummary struct {
+type JoinEventRequest struct {
 
-	// ユーザーID
+	// 参加するユーザーID
 	UserId string `json:"user_id"`
-
-	// ユーザー名
-	Name string `json:"name"`
-
-	// 世代（1-100の範囲）
-	Generation int32 `json:"generation"`
 }
